# DailyTaskSummarizer

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  NoteEditor.cpp  NoteEditor.h  main.cpp  style.css
